fix access role and define swagger properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,6 @@ spring:
     check-location: false
     baseline-on-migrate: true
 
-bezkoder:
-  app:
-    jwtSecret: secret
-    jwtExpirationMs: 86400000
+startup:
+  jwtSecret: secret
+  jwtExpirationMs: 86400000
